30_applications/mail/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mail
  labels:
    gateway.networking.k8s.io/public-routes: "true"
