30_applications/mail/clamav_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clamav-server
  namespace: mail
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "clamav"
    app.kubernetes.io/instance: "clamav"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: "clamav"
      app.kubernetes.io/instance: "clamav"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "clamav"
        app.kubernetes.io/instance: "clamav"
        app.kubernetes.io/component: "server"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: clamav
          image: docker.io/clamav/clamav:1.5.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: clamd
              containerPort: 3310
              protocol: TCP
            - name: milter
              containerPort: 7357
              protocol: TCP
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - sh
                - -c
                - /scripts/healthcheck.sh
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /scripts/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /scripts/healthcheck.sh
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              memory: "1500Mi"
              cpu: "100m"
            limits:
              memory: "2700Mi"
              cpu: "200m"
          volumeMounts:
            - name: scripts
              mountPath: /scripts
            - name: clamav-db
              mountPath: /var/lib/clamav
      volumes:
        - name: scripts
          configMap:
            name: clamav-config-scripts
            defaultMode: 0755
        - name: clamav-db
          persistentVolumeClaim:
            claimName: clamav-db
