30_applications/mail/postfix_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix-server
  namespace: mail
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "postfix"
    app.kubernetes.io/instance: "postfix"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: "postfix"
      app.kubernetes.io/instance: "postfix"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "postfix"
        app.kubernetes.io/instance: "postfix"
        app.kubernetes.io/component: "server"
    spec:
      containers:
        - name: postfix
          image: docker.io/boky/postfix:5.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 25
              protocol: TCP
            - name: submission
              containerPort: 587
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "65m"
            limits:
              memory: "384Mi"
              cpu: "500m"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 60
            failureThreshold: 6
            timeoutSeconds: 8
            exec:
              command:
                - sh
                - -c
                - /scripts/healthcheck.sh
          livenessProbe:
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 5
            exec:
              command:
                - sh
                - -c
                - >-
                  ps axf | fgrep -v grep | egrep -q '\{supervisord\}|/usr/bin/supervisord' &&
                  ps axf | fgrep -v grep | egrep -q '(/usr/lib/postfix/sbin/|/usr/libexec/postfix/)master'
          startupProbe:
            periodSeconds: 10
            failureThreshold: 90
            timeoutSeconds: 5
            exec:
              command:
                - sh
                - -c
                - >-
                  ps axf | fgrep -v grep | egrep -q '\{supervisord\}|/usr/bin/supervisord' &&
                  ps axf | fgrep -v grep | egrep -q '(/usr/lib/postfix/sbin/|/usr/libexec/postfix/)master' &&
                  ps axf | fgrep -v grep | fgrep -q 'opendkim'
          volumeMounts:
            - name: certificate
              mountPath: /etc/postfix/tls
            - name: spool
              mountPath: /var/spool/postfix
            - name: config-conf
              mountPath: /etc/postfix/conf
      volumes:
        - name: spool
          persistentVolumeClaim:
            claimName: postfix-spool
        - name: certificate
          secret:
            secretName: mail-server-tls
        - name: config-conf
          secret:
            secretName: postfix-config-conf
