30_applications/mail/roundcube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube-server
  namespace: mail
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "roundcube"
    app.kubernetes.io/instance: "roundcube"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "roundcube"
      app.kubernetes.io/instance: "roundcube"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "roundcube"
        app.kubernetes.io/instance: "roundcube"
        app.kubernetes.io/component: "server"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: roundcube
          image: docker.io/roundcube/roundcubemail:1.7.4-apache
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: http
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          volumeMounts:
            - name: www-data
              mountPath: /var/www/html
            - name: roundcube-temp
              mountPath: /tmp/roundcube-temp
            - name: roundcube-config
              mountPath: /var/roundcube/config
      volumes:
        - name: www-data
          emptyDir: {}
        - name: roundcube-temp
          emptyDir: {}
        - name: roundcube-config
          secret:
            secretName: roundcube-server-config
