30_applications/mail/rspamd_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rspamd-server
  namespace: mail
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "rspamd"
    app.kubernetes.io/instance: "rspamd"
    app.kubernetes.io/component: "server"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: "rspamd"
      app.kubernetes.io/instance: "rspamd"
      app.kubernetes.io/component: "server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "rspamd"
        app.kubernetes.io/instance: "rspamd"
        app.kubernetes.io/component: "server"
    spec:
      serviceAccountName: rspamd
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rspamd
          image: docker.io/rspamd/rspamd:4.2.2
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - name: proxy
              containerPort: 11332
              protocol: TCP
            - name: normal
              containerPort: 11333
              protocol: TCP
            - name: controller
              containerPort: 11334
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
            limits:
              memory: "750Mi"
              cpu: "1000m"
          startupProbe:
            failureThreshold: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /ping
              port: normal
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: normal
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: normal
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - name: config-confd
              mountPath: /etc/rspamd/local.d
            - name: rspamd-var
              mountPath: /var/lib/rspamd
      volumes:
        - name: config-confd
          secret:
            secretName: rspamd-config-confd
        - name: rspamd-var
          persistentVolumeClaim:
            claimName: rspamd-var
