30_applications/mail/dovecot_service_external.yaml
apiVersion: v1
kind: Service
metadata:
  name: dovecot-server-external
  namespace: mail
  labels:
    app.kubernetes.io/name: "dovecot"
    app.kubernetes.io/instance: "dovecot"
    app.kubernetes.io/component: "server"
spec:
  type: LoadBalancer
  loadBalancerIP: ${vals_apps_mail_dovecot_ipAddress}
  externalTrafficPolicy: Local
  ports:
    - name: pop3
      protocol: TCP
      port: 110
      targetPort: pop3
    - name: pop3s
      protocol: TCP
      port: 995
      targetPort: pop3s
    - name: imap
      protocol: TCP
      port: 143
      targetPort: imap
    - name: imaps
      protocol: TCP
      port: 993
      targetPort: imaps
    - name: sieve
      protocol: TCP
      port: 4190
      targetPort: sieve
  selector:
    app.kubernetes.io/name: "dovecot"
    app.kubernetes.io/instance: "dovecot"
    app.kubernetes.io/component: "server"
