30_applications/mail/postfix_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfix-server
  namespace: mail
  labels:
    app.kubernetes.io/name: "postfix"
    app.kubernetes.io/instance: "postfix"
    app.kubernetes.io/component: "server"
spec:
  type: LoadBalancer
  loadBalancerIP: ${vals_apps_mail_postfix_ipAddress}
  externalTrafficPolicy: Local
  ports:
    - name: smtp
      protocol: TCP
      port: 25
      targetPort: smtp
    - name: submission
      protocol: TCP
      port: 587
      targetPort: submission
  selector:
    app.kubernetes.io/name: "postfix"
    app.kubernetes.io/instance: "postfix"
    app.kubernetes.io/component: "server"
