30_applications/mail/roundcube_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundcube
  namespace: mail
  labels:
    app.kubernetes.io/name: roundcube
    app.kubernetes.io/instance: roundcube
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - name: public
      namespace: ingress
      sectionName: https-wildcard
  hostnames:
    - "mail.${vals_info_cluster_domain}"
    - "webmail.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: roundcube-server
          port: 80
