30_applications/mail/roundcube_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube
  namespace: mail
  annotations:
    external-dns.kubernetes.io/target: ${vals_info_cluster_publicHost}
    nginx.ingress.kubernetes.io/proxy-body-size: "28m"
  labels:
    app.kubernetes.io/name: "roundcube"
    app.kubernetes.io/instance: "roundcube"
    app.kubernetes.io/component: "server"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "mail.${vals_info_cluster_domain}"
        - "webmail.${vals_info_cluster_domain}"
      secretName: mail-server-tls
  rules:
    - host: "mail.${vals_info_cluster_domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: roundcube-server
                port:
                  name: http
    - host: "webmail.${vals_info_cluster_domain}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: roundcube-server
                port:
                  name: http
