30_applications/mail/roundcube_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: roundcube
  namespace: mail
  labels:
    app.kubernetes.io/name: roundcube
    app.kubernetes.io/instance: roundcube
    app.kubernetes.io/component: server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ingress
      namespace: ingress
      sectionName: https
  hostnames:
    - "mail.${vals_info_cluster_domain}"
    - "webmail.${vals_info_cluster_domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 10m
      backendRefs:
        - group: ""
          kind: Service
          name: roundcube-server
          port: 80
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: roundcube-request-buffer
  namespace: mail
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: roundcube
  requestBuffer:
    limit: 28Mi
